search bar error fixed. z-index:1 added to the navbar css

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,6 +3,7 @@
   background: white;
   position: fixed;
   width: 100vw;
+  z-index: 1;
 }
 
 .navbar-lewagon .navbar-collapse {
